--- a/css/font.css
+++ b/css/font.css
@@ -1,4 +1,1 @@
-@font-face {
-  font-family: "Montserrat";
-  src: url("../ressources/fonts/Montserrat.ttf");
-}/*# sourceMappingURL=font.css.map */
+@font-face{font-family:"Montserrat";src:url("../ressources/fonts/Montserrat.ttf")}/*# sourceMappingURL=font.css.map */
