--- a/css/reset.css
+++ b/css/reset.css
@@ -1,5 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}/*# sourceMappingURL=reset.css.map */
+*{margin:0;padding:0;box-sizing:border-box}/*# sourceMappingURL=reset.css.map */
