--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -23,6 +23,7 @@
 
     #header-logo {
         height: 100%;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -77,4 +78,48 @@
             cursor: pointer;
         }
     }
+}
+
+
+//Apply style for mobile
+@media only screen and (max-width: 768px) {
+    #header {
+        background-color: $black-color-darker;
+        grid-template-columns: 100%;
+        grid-template-rows: 20% 60% 20%;
+        width: 100vw;
+        height: 100vh;
+
+        &.headerScroll {
+            backdrop-filter: blur(10px);
+            width: 90%;
+            border-radius: 20px 20px 0 0;
+            margin-top: 20px;
+            margin-inline: 5%;
+        }
+        #header-links {
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+            font-weight: 600;
+            font-size: 1.4em;
+            text-transform: uppercase;
+            text-decoration: none;
+    
+            & a {
+                text-decoration: none;
+                color: $white-color;
+                font-family: "Montserrat", sans-serif;
+                transition: all 0.15s ease-in-out;
+    
+                &:hover {
+                    cursor: pointer;
+                    transform: scale(1.08);
+                }
+            }
+        }
+    }
+
 }
